Added missing folder to yaml

--- a/folders_to_process.yaml
+++ b/folders_to_process.yaml
@@ -1,4 +1,5 @@
 directories:
+- /mnt/upramdya_data/MD/MultiMazeRecorder/Videos/231115_TNT_Fine_1_Videos_Tracked
 - /mnt/upramdya_data/MD/MultiMazeRecorder/Videos/231115_TNT_Fine_2_Videos_Tracked
 - /mnt/upramdya_data/MD/MultiMazeRecorder/Videos/231115_TNT_Fine_3_Videos_Tracked
 - /mnt/upramdya_data/MD/MultiMazeRecorder/Videos/231116_TNT_Fine_1_Videos_Tracked
